Limpieza y orden en modulo sucursales, Se saca código repetitivo de los constructores y se pasa todo a @Autowired para que quede más limpio y ordenado igual que los otros servicios. También se pasaron los mappers a componentes de Spring.